--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -187,7 +187,7 @@
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/tooth-growth-demo.pdf">Two-Way ANOVA Model with ToothGrowth data</a> (Feb 11)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/toothgrowth-interaction.pdf">Testing for an Interaction in ToothGrowth Data</a> (Feb 13)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/two-way-anova-general-steps.pdf">General Steps for a Two-Way ANOVA</a> (Feb 18)</li>
-							<li><a href="">TWA Interaction and Additive Model Example with Debt Data</a> (Feb 18)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/twa-debt-ex.pdf">TWA Interaction and Additive Model Example with Debt Data</a> (Feb 18)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
@@ -252,6 +252,11 @@
  				</div>
  				<hr>
 
+ 				<div class="row">
+ 					<h2>Exam 2</h2>
+ 				</div>
+ 				<hr>
+
 				<div class="row">
 					<h2>Chapter 7</h2>
 					<div class="col-md-4 col-sm-12">
@@ -263,6 +268,11 @@
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 					</div>
+ 				</div>
+ 				<hr>
+
+ 				<div class="row">
+ 					<h2>Final Exam</h2>
  				</div>
  				<hr>
 			</div>
