Add link for 2/20

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -188,6 +188,7 @@
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/toothgrowth-interaction.pdf">Testing for an Interaction in ToothGrowth Data</a> (Feb 13)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/two-way-anova-general-steps.pdf">General Steps for a Two-Way ANOVA</a> (Feb 18)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/twa-debt-ex.pdf">TWA Interaction and Additive Model Example with Debt Data</a> (Feb 18)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/twa-anova-tables.pdf">Two Way ANOVA Tables</a> (Feb 20)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
