Add links to practice exams

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -16,6 +16,17 @@
 <body>
 	<div class="container">
 
+<!--
+ _        _______           ______   _______  _______ 
+( (    /|(  ___  )|\     /|(  ___ \ (  ___  )(  ____ )
+|  \  ( || (   ) || )   ( || (   ) )| (   ) || (    )|
+|   \ | || (___) || |   | || (__/ / | (___) || (____)|
+| (\ \) ||  ___  |( (   ) )|  __ (  |  ___  ||     __)
+| | \   || (   ) | \ \_/ / | (  \ \ | (   ) || (\ (   
+| )  \  || )   ( |  \   /  | )___) )| )   ( || ) \ \__
+|/    )_)|/     \|   \_/   |/ \___/ |/     \||/   \__/
+-->
+
 		<!-- NAVBAR -->
 		<header class = "navbar" id = "top" role = "banner">
 			<div class = "row">
@@ -50,6 +61,18 @@
 		<!-- BODY -->
 		<div class = "row">
 			<div class="container">
+
+<!--
+ _______ _________ _______  _______ _________
+(  ____ \\__   __/(  ___  )(  ____ )\__   __/
+| (    \/   ) (   | (   ) || (    )|   ) (   
+| (_____    | |   | (___) || (____)|   | |   
+(_____  )   | |   |  ___  ||     __)   | |   
+      ) |   | |   | (   ) || (\ (      | |   
+/\____) |   | |   | )   ( || ) \ \__   | |   
+\_______)   )_(   |/     \||/   \__/   )_(  
+-->
+
 				<div class="row">
 					<h2>Getting Started</h2>
 					<div class="col-md-4 col-sm-12">
@@ -72,6 +95,17 @@
 					</div>
 				</div>
 				<hr>
+
+<!--
+ _______             __   
+(  ____ \|\     /|  /  \  
+| (    \/| )   ( |  \/) ) 
+| |      | (___) |    | | 
+| |      |  ___  |    | | 
+| |      | (   ) |    | | 
+| (____/\| )   ( |  __) (_
+(_______/|/     \|  \____/
+-->
 
 				<div class="row">
 					<h2>Chapter 1</h2>
@@ -124,6 +158,17 @@
 					</div>
  				</div>
  				<hr>
+
+ <!--
+ _______             _______ 
+(  ____ \|\     /|  / ___   )
+| (    \/| )   ( |  \/   )  |
+| |      | (___) |      /   )
+| |      |  ___  |    _/   / 
+| |      | (   ) |   /   _/  
+| (____/\| )   ( |  (   (__/\
+(_______/|/     \|  \_______/
+-->
 
 				<div class="row">
 					<h2>Chapter 2</h2>
@@ -179,6 +224,17 @@
  				</div>
  				<hr>
 
+ <!--
+ _______             ______  
+(  ____ \|\     /|  / ___  \ 
+| (    \/| )   ( |  \/   \  \
+| |      | (___) |     ___) /
+| |      |  ___  |    (___ ( 
+| |      | (   ) |        ) \
+| (____/\| )   ( |  /\___/  /
+(_______/|/     \|  \______/ 
+-->
+
 				<div class="row">
 					<h2>Chapter 3</h2>
 					<div class="col-md-4 col-sm-12">
@@ -206,10 +262,39 @@
  				</div>
  				<hr>
 
+<!--
+ _______           _______  _______    __   
+(  ____ \|\     /|(  ___  )(       )  /  \  
+| (    \/( \   / )| (   ) || () () |  \/) ) 
+| (__     \ (_) / | (___) || || || |    | | 
+|  __)     ) _ (  |  ___  || |(_)| |    | | 
+| (       / ( ) \ | (   ) || |   | |    | | 
+| (____/\( /   \ )| )   ( || )   ( |  __) (_
+(_______/|/     \||/     \||/     \|  \____/
+-->
+
  				<div class="row">
  					<h2>Exam 1</h2>
+	 				<div class = "col-md-12">
+	 					<h4>Practice Exams</h4>
+		 				<ul>
+		 					<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam1/Exam1_sp14.pdf">Exam 1 - Spring 2014</a></li>
+		 					<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam1/Exam2Fall14.pdf">Exam 2 - Fall 2014</a></li>
+		 				</ul>
+		 			</div>
  				</div>
  				<hr>
+
+<!--
+ _______                ___   
+(  ____ \|\     /|     /   )  
+| (    \/| )   ( |    / /) |  
+| |      | (___) |   / (_) (_ 
+| |      |  ___  |  (____   _)
+| |      | (   ) |       ) (  
+| (____/\| )   ( |       | |  
+(_______/|/     \|       (_)  
+-->
 
 				<div class="row">
 					<h2>Chapter 4</h2>
@@ -225,6 +310,17 @@
  				</div>
  				<hr>
 
+<!--
+ _______             _______ 
+(  ____ \|\     /|  (  ____ \
+| (    \/| )   ( |  | (    \/
+| |      | (___) |  | (____  
+| |      |  ___  |  (_____ \ 
+| |      | (   ) |        ) )
+| (____/\| )   ( |  /\____) )
+(_______/|/     \|  \______/ 
+-->
+
 				<div class="row">
 					<h2>Chapter 5</h2>
 					<div class="col-md-4 col-sm-12">
@@ -238,6 +334,17 @@
 					</div>
  				</div>
  				<hr>
+
+<!--
+ _______              ______ 
+(  ____ \|\     /|   / ____ \
+| (    \/| )   ( |  ( (    \/
+| |      | (___) |  | (____  
+| |      |  ___  |  |  ___ \ 
+| |      | (   ) |  | (   ) )
+| (____/\| )   ( |  ( (___) )
+(_______/|/     \|   \_____/ 
+-->
 
 				<div class="row">
 					<h2>Chapter 6</h2>
@@ -253,10 +360,32 @@
  				</div>
  				<hr>
 
+<!--
+ _______           _______  _______    _______ 
+(  ____ \|\     /|(  ___  )(       )  / ___   )
+| (    \/( \   / )| (   ) || () () |  \/   )  |
+| (__     \ (_) / | (___) || || || |      /   )
+|  __)     ) _ (  |  ___  || |(_)| |    _/   / 
+| (       / ( ) \ | (   ) || |   | |   /   _/  
+| (____/\( /   \ )| )   ( || )   ( |  (   (__/\
+(_______/|/     \||/     \||/     \|  \_______/
+-->
+
  				<div class="row">
  					<h2>Exam 2</h2>
  				</div>
  				<hr>
+
+<!--
+ _______             ______  
+(  ____ \|\     /|  / ___  \ 
+| (    \/| )   ( |  \/   )  )
+| |      | (___) |      /  / 
+| |      |  ___  |     /  /  
+| |      | (   ) |    /  /   
+| (____/\| )   ( |   /  /    
+(_______/|/     \|   \_/     
+-->
 
 				<div class="row">
 					<h2>Chapter 7</h2>
@@ -271,6 +400,17 @@
 					</div>
  				</div>
  				<hr>
+
+<!--
+ _______ _________ _        _______  _       
+(  ____ \\__   __/( (    /|(  ___  )( \      
+| (    \/   ) (   |  \  ( || (   ) || (      
+| (__       | |   |   \ | || (___) || |      
+|  __)      | |   | (\ \) ||  ___  || |      
+| (         | |   | | \   || (   ) || |      
+| )      ___) (___| )  \  || )   ( || (____/\
+|/       \_______/|/    )_)|/     \|(_______/
+-->
 
  				<div class="row">
  					<h2>Final Exam</h2>
