Add information about notesheets and calculators to FAQ

--- a/217-website/FAQ/index.html
+++ b/217-website/FAQ/index.html
@@ -59,6 +59,7 @@
 					<li><a href="#group-work">Are we allowed to work in groups?</a></li>
 					<li><a href="#late-homeworks">Will lake homeworks be allowed?</a></li>
 					<li><a href="#grading-scale">What is the grading scale?</a></li>
+					<li><a href="#exam-materials">What can I bring to the exams?</a></li>
 				</ul>
 			<hr>
 			</div>
@@ -110,6 +111,11 @@
 					<li><i>D </i> 60-67</li>
 					<li><i>F </i> less than 60</li>
 				</ul>
+				<h2>
+
+				<h2 id="exam-materials">What can I bring to the exams?</h2>
+				<p>You will need to bring a calculator to the exams.  This calculator is only needed for basic arithmetic (i.e. you do not need a graphing calculator).  Phones are not allowed.</p>
+				<p>You are allowed one 8.5 x 11 sheet of notes for Exam 1 and Exam 2.  You are allowed two sheets for the final.  You may write on both the front and the back of these sheets.  These note sheets must be handwritten in <strong>your</strong> handwriting.  This means you may not make copies and share them with other students.  You must write your own notes.</p>
 
 			</div> <!-- close answers -->
 		</div> 
