Add link to Two-Way ANOVA activity

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -256,7 +256,13 @@
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 						<ul>
-							<li><a href="http://chessa015.github.io/Ch3_TwoWayANOVA">Last Year's Two Way ANOVA Activity</a> (Optional)</li>
+							<li>
+								<a href="http://kferris10.github.io/Ch3-TWA-act/">Two-Way ANOVA Activity</a>
+								<br>
+								<span>This activity covers interaction models, interaction ANOVA tables, and assumptions for a Two-Way ANOVA.</span>
+								<br>
+								<span>No homework is required for this activity.</span>
+							</li>
 						</ul>
 					</div>
  				</div>
