Add keys to the content page

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -193,6 +193,8 @@
 							</li>
 							<li>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj3/Project%203.docx">Project 3</a> (Due Feb 13)
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj3/proj3-key.pdf">Key</a>
 							</li>
 						</ul>
 					</div>
@@ -250,7 +252,11 @@
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
 						<ul>
-							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/homework4-217.pdf">Homework 4</a> (Due Feb 25)</li>
+							<li>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/homework4-217.pdf">Homework 4</a> (Due Feb 25)
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/homework4-217-key.pdf">Key</a>
+							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
@@ -284,7 +290,7 @@
 	 				<div class = "col-md-12">
 	 					<h4>Practice Exams</h4>
 		 				<ul>
-		 					<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam1/Exam1_sp14.pdf">Exam 1 - Spring 2014</a></li>
+		 					<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam1/Exam1_sp14.pdf">Exam 1 - Spring 2014</a> and the <a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch3/homework4-217.pdf">key</a></li>
 		 					<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam1/Exam2Fall14.pdf">Exam 2 - Fall 2014</a></li>
 		 				</ul>
 		 			</div>
