Add link to second practice exam

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -291,7 +291,7 @@
 	 					<h4>Practice Exams</h4>
 		 				<ul>
 		 					<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam1/Exam1_sp14.pdf">Exam 1 - Spring 2014</a> and the <a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam1/Exam1_sp14_Key.pdf">key</a></li>
-		 					<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam1/Exam2Fall14.pdf">Exam 2 - Fall 2014</a></li>
+		 					<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam1/Exam2Fall14.pdf">Exam 2 - Fall 2014</a> and the <a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam1/Exam2_fall14_Key.pdf">key</a></li>
 		 				</ul>
 		 			</div>
  				</div>
