Add links for Project 4

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -315,6 +315,13 @@
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
+						<ul>
+							<li>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj4/Project4.pdf">Project 4</a> (Due Mar 20)
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj4/slides.csv">Slides Data</a>
+							</li>
+						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
