--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -312,6 +312,7 @@
 					<h2>Chapter 4</h2>
 					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
+						<ul><li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch4/chisq-intro-worksheet.pdf">Intro Worksheet</a></li></ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
@@ -321,10 +322,22 @@
 								<br>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj4/slides.csv">Slides Data</a>
 							</li>
+							<li>
+								<span>Homework 5 - Located in Chi-Squared Activity</span>
+								<br>
+								<span>Due Friday, March 20</span>
+							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
+						<ul>
+							<li>
+								<a href="http://kferris10.github.io/Ch4-Chi-Squared-act/">Chi-Squared Activity</a>
+								<br>
+								<span>Due Friday, March 20</span>
+							</li>
+						</ul>
 					</div>
  				</div>
  				<hr>
