--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -357,6 +357,9 @@
 					<h2>Chapter 5</h2>
 					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
+						<ul>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch5/example-scatterplots.pdf">Assessing Scatterplots</a> (March 18)</li>
+						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
