Add link for March 23

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -359,6 +359,8 @@
 						<h4>Handouts</h4>
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch5/example-scatterplots.pdf">Assessing Scatterplots</a> (March 18)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch5/Beer-vs-BAC.pdf">BAC vs Beer Example</a> (March 20)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch5/RSquared-Influence-examples.pdf">R-Squared and Influence Examples</a> (March 23)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
