--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -393,6 +393,13 @@
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
+						<ul>
+							<li>
+								<a href="http://kferris10.github.io/Ch6-Hypothesis-Testing-act/">Hypothesis Tests for SLR</a> (March 24)
+								<br>
+								<span>No homework for this activity</span>
+							</li>
+						</ul>
 					</div>
  				</div>
  				<hr>
