--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -387,6 +387,9 @@
 					<h2>Chapter 6</h2>
 					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
+						<ul>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/BAC-Assump-HT.pdf">SLR for BAC vs Beers</a> (March 27)</li>
+						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
