Add link to transformation handout for 4/1

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -390,6 +390,7 @@
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/BAC-Assump-HT.pdf">SLR for BAC vs Beers</a> (March 27)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/UN-transformation-example.pdf">Transformation Example with Infant Mortality vs GDP</a> (March 30)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/kids-respiratory-transformation-example.pdf">Transformation Example with Children's Respiratory Rates</a> (April 1)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
