Add link for 4/6 handout

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -391,6 +391,7 @@
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/BAC-Assump-HT.pdf">SLR for BAC vs Beers</a> (March 27)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/UN-transformation-example.pdf">Transformation Example with Infant Mortality vs GDP</a> (March 30)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/kids-respiratory-transformation-example.pdf">Transformation Example with Children's Respiratory Rates</a> (April 1)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/bac_beer_ci_pi.pdf">Confidence and Prediction Interval Example</a> (April 6)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
@@ -425,6 +426,16 @@
 
  				<div class="row">
  					<h2>Exam 2</h2>
+ 					<div class = "col-md-12">
+	 					<h4>Practice Exam</h4>
+		 				<ul>
+		 					<li>
+		 						<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam2/Practice%20Exam.pdf">Fall 13 Exam</a>
+		 						<br>
+		 						<span>Ignore questions 3c and 3d.</span>
+		 					</li>
+		 				</ul>
+		 			</div>
  				</div>
  				<hr>
 
