Post keys to Homeworks 5 and 6 and Project 4

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -321,11 +321,15 @@
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj4/Project4.pdf">Project 4</a> (Due Mar 20)
 								<br>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj4/slides.csv">Slides Data</a>
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj4/proj4-key.pdf">Key</a>
 							</li>
 							<li>
 								<span>Homework 5 - Located in Chi-Squared Activity</span>
 								<br>
 								<span>Due Friday, March 20</span>
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch4/hw5_key.pdf">Key</a>
 							</li>
 						</ul>
 					</div>
@@ -397,7 +401,11 @@
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
 						<ul>
-							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/slrHW.pdf">Homework 6</a> (Due April 1)</li>
+							<li>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/slrHW.pdf">Homework 6</a> (Due April 1)
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/slrHW-key.pdf">Key</a>
+							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
