Add link to practice exam

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -444,6 +444,8 @@
 		 						<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam2/Practice%20Exam.pdf">Fall 13 Exam</a>
 		 						<br>
 		 						<span>Ignore questions 3c and 3d.</span>
+		 						<br>
+		 						<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Exam2/Practice%20Exam%20Key.pdf">Key</a>
 		 					</li>
 		 				</ul>
 		 			</div>
