--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -408,6 +408,8 @@
 							</li>
 							<li>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/transformation_quiz.pdf">Transformation Quiz</a> (April 8)
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch6/transformation_quiz_key.pdf">Key</a>
 							</li>
 						</ul>
 					</div>
