Add handouts for 4/13 and 4/15

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -469,6 +469,10 @@
 					<h2>Chapter 7</h2>
 					<div class="col-md-4 col-sm-12">
 						<h4>Handouts</h4>
+						<ul>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/snow_example.pdf">Snow Example 1</a> (April 13)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/mlr-snow-hypotheses.pdf">Snow Example 2</a> (April 15)</li>
+						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
