Post links to Project 5

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -476,6 +476,13 @@
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Homework</h4>
+						<ul>
+							<li>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj5/project-5.pdf">Project 5</a> (Due April 24)
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj5/cig.csv">Cigarette Data</a>
+							</li>
+						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
