Add link for Comparing Regression Models activity

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -325,7 +325,7 @@
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj4/proj4-key.pdf">Key</a>
 							</li>
 							<li>
-								<span>Homework 5 - Located in Chi-Squared Activity</span>
+								<span><strong>Homework 5</strong> - Located in Chi-Squared Activity</span>
 								<br>
 								<span>Due Friday, March 20</span>
 								<br>
@@ -482,10 +482,16 @@
 								<br>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj5/cig.csv">Cigarette Data</a>
 							</li>
+							<li>
+								<span><strong>Homework 7:</strong> Located in Comparing Regression Models Activity</span>
+								<br>
+								<span>Due Wednesday, April 22</span>
+							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
+						<a href="http://kferris10.github.io/Ch7-Comparing-Regression-Models/">Comparing Regression Models Activity</a>
 					</div>
  				</div>
  				<hr>
