--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -472,6 +472,7 @@
 						<ul>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/snow_example.pdf">Snow Example 1</a> (April 13)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/mlr-snow-hypotheses.pdf">Snow Example 2</a> (April 15)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/diff-slopes-dyslexia.pdf">Different Slopes with Dyslexia Data</a> (April 22)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
@@ -491,7 +492,10 @@
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
-						<a href="http://kferris10.github.io/Ch7-Comparing-Regression-Models/">Comparing Regression Models Activity</a>
+						<ul>
+							<li><a href="http://kferris10.github.io/Ch7-Comparing-Regression-Models/">Comparing Regression Models Activity</a></li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/separate-lines-4-22.pdf">Different Slopes Worksheet</a> (April 22)</li>
+						</ul>
 					</div>
  				</div>
  				<hr>
