Add link to 4/24 handout

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -473,6 +473,7 @@
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/snow_example.pdf">Snow Example 1</a> (April 13)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/mlr-snow-hypotheses.pdf">Snow Example 2</a> (April 15)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/diff-slopes-dyslexia.pdf">Different Slopes with Dyslexia Data</a> (April 22)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/interaction_f_test.pdf">Testing for Different Slopes</a> (April 24)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
