Add link to Homework 8

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -489,6 +489,7 @@
 								<br>
 								<span>Due Friday, April 24</span>
 							</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/hw8-217.pdf">Homework 8</a> (Due Wednesday, April 29)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
