--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -474,6 +474,7 @@
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/mlr-snow-hypotheses.pdf">Snow Example 2</a> (April 15)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/diff-slopes-dyslexia.pdf">Different Slopes with Dyslexia Data</a> (April 22)</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/interaction_f_test.pdf">Testing for Different Slopes</a> (April 24)</li>
+							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/aic-comparisons.pdf">AICs for Model Comparison</a> (April 27)</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
