Update due date for Homework 8

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -490,13 +490,21 @@
 								<br>
 								<span>Due Friday, April 24</span>
 							</li>
-							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/hw8-217.pdf">Homework 8</a> (Due Wednesday, April 29)</li>
+							<li>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/hw8-217.pdf">Homework 8</a> 
+								<br>
+								<span>(Due Friday, May 1)</span>
+							</li>
 						</ul>
 					</div>
 					<div class="col-md-4 col-sm-12">
 						<h4>Other</h4>
 						<ul>
-							<li><a href="http://kferris10.github.io/Ch7-Comparing-Regression-Models/">Comparing Regression Models Activity</a></li>
+							<li>
+								<a href="http://kferris10.github.io/Ch7-Comparing-Regression-Models/">Comparing Regression Models Activity</a>
+								<br>
+								<span>Homework 7 is located in here</span>
+							</li>
 							<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/separate-lines-4-22.pdf">Different Slopes Worksheet</a> (April 22)</li>
 						</ul>
 					</div>
