Add links to final practice

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -524,6 +524,10 @@
 
  				<div class="row">
  					<h2>Final Exam</h2>
+ 					<ul>
+ 						<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final-practice-problems.pdf">Ch 2-5 Practice Problems</a></li>
+ 						<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final_f14.pdf">Fall, 2014 Final Exam</a></li>
+ 					</ul>
  				</div>
  				<hr>
 			</div>
