--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -484,16 +484,22 @@
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj5/project-5.pdf">Project 5</a> (Due April 24)
 								<br>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj5/cig.csv">Cigarette Data</a>
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Proj5/project5_key.pdf">Key</a>
 							</li>
 							<li>
 								<span><strong>Homework 7:</strong> Located in Comparing Regression Models Activity</span>
 								<br>
 								<span>Due Friday, April 24</span>
+								<br>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/hw7-key.pdf">Key</a>
 							</li>
 							<li>
 								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/hw8-217.pdf">Homework 8</a> 
 								<br>
 								<span>(Due Friday, May 1)</span>
+								<br>
+								<span>Key coming on Monday</span>
 							</li>
 						</ul>
 					</div>
@@ -525,8 +531,16 @@
  				<div class="row">
  					<h2>Final Exam</h2>
  					<ul>
- 						<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final-practice-problems.pdf">Ch 2-5 Practice Problems</a></li>
- 						<li><a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final_f14.pdf">Fall, 2014 Final Exam</a></li>
+ 						<li>
+ 							<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final-practice-problems.pdf">Ch 2-5 Practice Problems</a>
+ 							<br>
+ 							<span>Key is in progress</span>
+ 						</li>
+ 						<li>
+ 							<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final_f14.pdf">Fall, 2014 Final Exam</a>
+ 							<br>
+ 							<span>Key is in progress</span>
+ 						</li>
  					</ul>
  				</div>
  				<hr>
