Add links to keys

--- a/217-website/Content/index.html
+++ b/217-website/Content/index.html
@@ -499,7 +499,7 @@
 								<br>
 								<span>(Due Friday, May 1)</span>
 								<br>
-								<span>Key coming on Monday</span>
+								<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Ch7/hw8-217-key.pdf">Key</a>
 							</li>
 						</ul>
 					</div>
@@ -532,14 +532,14 @@
  					<h2>Final Exam</h2>
  					<ul>
  						<li>
- 							<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final-practice-problems.pdf">Ch 2-5 Practice Problems</a>
+ 							<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final-practice-problems.pdf">Ch 2-6 Practice Problems</a>
  							<br>
- 							<span>Key is in progress</span>
+							<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final-practice-problems-key.pdf">Key</a>
  						</li>
  						<li>
  							<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final_f14.pdf">Fall, 2014 Final Exam</a>
  							<br>
- 							<span>Key is in progress</span>
+							<a href="https://dl.dropboxusercontent.com/u/102790554/Stat_217_S15/Final/final_f14_key.pdf">Key</a>
  						</li>
  					</ul>
  				</div>
